fix conflict between flex wrap and text wrap

--- a/src/common/typeset.less
+++ b/src/common/typeset.less
@@ -73,11 +73,11 @@
   -webkit-text-fill-color: transparent;
 }
 
-.nowrap {
+.text-nowrap {
   white-space: nowrap;
 }
 
-.pre {
+.text-pre {
   white-space: pre;
 }
 
